# midi

./: .gitignore  ENCAPSULATION.md  MIDI-PROTOCOL.md  README.md  beatsync.py  com.benlab.lumideck-midi.plist  lumideck_midi.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
