[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openlamp-midi"
version = "0.2.0"
description = "Ableton Link / tempo-follow for OpenLamp smart lamps — flash them on the beat, phase-accurate. (MIDI *control* moved into the engine: github.com/openlamp/engine)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Benoît Besson (@Beennnn)", email = "benoit.besson@gmail.com" }]
keywords = ["midi", "ableton-link", "wled", "smart-lamp", "lighting", "stream-deck", "beat-sync"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: MacOS X",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Home Automation",
]
# python-rtmidi is the only hard dep (MIDI I/O). Ableton Link (aalink) is an
# optional native build — install it with the "link" extra only if you use it.
dependencies = ["python-rtmidi>=1.5"]

[project.optional-dependencies]
link = ["aalink>=0.1"]

[project.urls]
Homepage = "https://github.com/openlamp/midi"
Source = "https://github.com/openlamp/midi"
Issues = "https://github.com/openlamp/midi/issues"
"OpenLamp umbrella" = "https://github.com/openlamp"

[project.scripts]
beatsync = "beatsync:main"

[tool.setuptools]
# Flat single-file module.
py-modules = ["beatsync"]
